2005-01-26 Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/NSApplication.m (-beginModalSessionforWindow:): Center
	panels only if they are not already up, matching OS X Panther;
	document.
	(-runModalForWindow:, -runModalSession:): Clarify documentation.

2005-01-25 01:05  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSImageCell.m (-drawInteriorWithFrame:inView:): Use
	-drawInRect:fromRect:operation:fraction: to draw the image.

2005-01-25 00:29  Alexander Malmberg  <alexander@malmberg.org>

	* Headers/AppKit/NSImage.h (-drawAtPoint:fromRect:fraction:)
	(-drawInRect:fromRect:operation:fraction:): Document.
	* Source/NSImage.m -drawAtPoint:fromRect:fraction:)
	(-drawInRect:fromRect:operation:fraction:): Implement.
	(min, max): New functions.
	(-drawRepresentation:inRect:): Save the gstate before drawing
	and restore it afterwards.

	Fixes bug #11712.

2005-01-24 16:57  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSPopUpButtonCell.m (-synchronizeTitleAndSelectedItem): For
	non-pulldowns, make sure the selected item and the highlighted item
	are the same.

2005-01-24  Quentin Mathe  <qmathe@club-internet.fr>

	* Source/GSToolbarView.m (initSystemExtensionsColors()): Removed 
	spurious 'else' (introduced with revision 1.11) which prevented toolbar 
	colors loading code to be executed (Fix the white toolbar background bug
	reported by Riccardo Mottola).

2005-01-24 Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/NSSavePanel.m (-_shouldShowExtension:isDir:,
	-setRequiredFileType:, -requiredFileType, -filename): For filename
	display filtering, handle case where _requiredFileType is unset or
	set to nil or "" by allowing any extension (including none), as
	specified in Apple docs, instead of allowing no extensions, as it
	was.  Document.

2005-01-24 00:48  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSImageCell.m (-drawInteriorWithFrame:inView:): Draw
	the image using the right size, but don't scale it. Work around
	bug #11712.
